--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
+    "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
